@@ -1,5 +1,7 @@
 package org.red5.server.service;
 
+import java.util.Arrays;
+
 /*
  * RED5 Open Source Flash Server - http://www.osflash.org/red5
  * 
@@ -37,7 +39,16 @@ public class MethodNotFoundException extends RuntimeException {
      * @param methodName      Service method name that can't be found
      */
     public MethodNotFoundException(String methodName) {
-		super("Method not found: " + methodName);
+		super("Method " + methodName + " without arguments not found");
+	}
+
+    /**
+     * Creates exception with given method name and arguments
+     * @param methodName      Service method name that can't be found
+     * @param args			  Arguments given
+     */
+    public MethodNotFoundException(String methodName, Object[] args) {
+		super("Method " + methodName + " with arguments " + Arrays.asList(args) + " not found");
 	}
 
 }
